2015-04-21  Roy Franz  <roy.franz@linaro.org>

	* util.c, util.h: Add utility function read_file, which reads an
	  entire binary file into a buffer.
	* dmidecode.c: Add passing of flags parameter to dmi_table.
	* dmidecode.c: Add reading of SMBIOS tables from sysfs.

2015-04-20  Jean Delvare  <jdelvare@suse.de>

	* biosdecode.c: Add support for the _SM3_ entry point, as defined in
	  the SMBIOS 3.0.0 specification.

2014-11-14  Jean Delvare  <jdelvare@suse.de>

	* man/dmidecode.8: Add a note about DMI strings available from sysfs
	  on Linux.

2014-10-13  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Add support for DDR4 (DMI type 17). Patch from Tomohiro
	  Kimura. The value was taken from preliminary SMBIOS specification
	  version 3.0.0d.
	  This fixes Savannah bug #43370:
	  https://savannah.nongnu.org/bugs/?43370

2014-07-11  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Decode the CPUID of recent AMD processors (DMI type 4).

2014-03-20  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Let legacy_decode be quiet in dump mode too.
	* dmidecode.c: Skip the SMBIOS version comparison in quiet mode.
	  Patch from Jens Rosenboom.

2014-02-25  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Fix spacing of memory module voltage attributes
	  (DMI type 17).

2014-01-13  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Decode ID of PCI Express 3 slots (DMI type 9).
	  This fixes Savannah bug #40178:
	  https://savannah.nongnu.org/bugs/?40178

2014-01-13  Jean Delvare  <jdelvare@suse.de>

	* LICENSE: Update to the latest upstream version. Amongst other
	  things, this fixes the FSF address.

2013-04-24  Jean Delvare  <jdelvare@suse.de>

	* dmidecode.c: Strip trailing zeroes from memory voltage values
	  (DMI type 17).
	* dmidecode.c: Fix support for new processor upgrade types (DMI
	  type 4) and new memory device type (DMI type 17.)

2013-04-17  Anton Arapov  <anton@redhat.com>

	Update to support SMBIOS specification version 2.8.0.
