@@ -42,6 +42,7 @@ extern struct opt opt;
 #define FLAG_QUIET              (1 << 3)
 #define FLAG_DUMP_BIN           (1 << 4)
 #define FLAG_FROM_DUMP          (1 << 5)
+#define FLAG_NO_SYSFS           (1 << 6)
 
 int parse_command_line(int argc, char * const argv[]);
 void print_help(void);
