@@ -130,6 +130,10 @@ later.
 Read the DMI data from a binary file previously generated using 
 \fB--dump-bin\fR.
 .TP
+.BR "  " "  " "--no-sysfs"
+Do not attempt to read DMI data from sysfs files. This is mainly useful for
+debugging.
+.TP
 .BR "-h" ", " "--help"
 Display usage information and exit
 .TP
